Dodal naslov za box na domaci strani. Se je treba spremeniti.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,21 @@
   </div>
 
   <div class="content">
+    <div class="naslov">
+      <h2>Algebra</h2>
+    </div>
+    
     Algebra je ena izmed temeljnih vej matematike, ki se ukvarja s preučevanjem struktur,
     relacij in količin. V algebri se uporabljajo simboli in črke za predstavitev števil in količin
     ter za izražanje matematičnih pravil in operacij. Algebra je ključnega pomena za reševanje
     enačb in neenačb ter za razumevanje funkcij in njihovih lastnosti.
   </div>
 
+  <div class="content">
+    Algebra je ena izmed temeljnih vej matematike, ki se ukvarja s preučevanjem struktur,
+    relacij in količin. V algebri se uporabljajo simboli in črke za predstavitev števil in količin
+    ter za izražanje matematičnih pravil in operacij. Algebra je ključnega pomena za reševanje
+    enačb in neenačb ter za razumevanje funkcij in njihovih lastnosti.
+  </div>
 </body>
 </html>
